changed card structure so that number of cards would not overflow. Reduced number of items allowed to add to list to 15. Possible bug with the number change from 20 to 15 with loading the image of the card.

--- a/RandomWeb/src/app/components/card-pick/card-pick.component.css
+++ b/RandomWeb/src/app/components/card-pick/card-pick.component.css
@@ -1,8 +1,13 @@
+#element{
+    display:flex;
+    flex-direction: column;
+
+}
 #container{
     position:relative;
     
     width: 800px;
-    height: 400px;
+    height: 500px;
 
     background:transparent;
     border: none !important;
